[gd_scene load_steps=4 format=2]

[ext_resource path="res://tex/RotatingGun.png" type="Texture" id=1]
[ext_resource path="res://RotatingGun.gd" type="Script" id=2]
[ext_resource path="res://sfx/laser.wav" type="AudioStream" id=3]

[node name="RotatingGun" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "SFX"
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
